--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -105,6 +105,7 @@
 			"certificates": "Zertifikate",
 			"displays": "Displays",
 			"ds": "Verzeichnisdienste",
+			"gsx": "GSX",
 			"fv_escrow": "Filevault Escrow",
 			"inventory_items": "Inventar",
 			"location": "Standort",
@@ -117,6 +118,7 @@
 			"summary": "Zusammenfassung",
 			"third_party_software": "Drittanbieter-Software",
 			"timemachine": "Time Machine"
+			"wifi": "WiFi"
 		},
 		"installed_apple_software": "Installierte Apple Software",
 		"installed_third_party_software": "Installierte Drittanbieter-Software",
@@ -134,6 +136,7 @@
 		}
 	},
 	"configuration": "Konfiguration",
+	"connected": "Verbunden",
 	"cpu": {
 		"arch": "CPU Architektur",
 		"core": "Kerne",
@@ -203,6 +206,30 @@
 	},
 	"free_disk_space": "Verfügbarer Speicherplatz",
 	"free_disk_space_less_than": "Verfügbarer Speicherplatz < __gb__GB",
+	    "gsx": {
+		"configuration": "Bestellte Konfiguration",
+		"contracttype": "Vertragstyp",
+		"country": "In welchem Land verkauft?",
+		"coverage": {
+			"conend": "Vertragsende",
+			"constart": "Vertragsbeginn",
+			"start": "Abgedeckt ab",
+			"end": "Abdeckung endet"
+		},
+		"estpurchasedate": "Geschätztes Kaufdatum",
+		"laborcovered": "Arbeitsleistung abgedeckt?",
+		"loaner": "Leihgerät",
+		"modeldescription": "Modellbeschreibung",
+		"obsolete": "Obsolet",
+		"partscovered": "Teile abgedeckt?",
+		"recheck": "Garantiestatus überprüfen",
+		"sla": "Garantie SLA",
+		"supported": "Unterstützt",
+		"vintage": "Vintage",
+		"warrantystatus": "Garantiestatus",
+		"warrantydays": "Verbleibende Tage Garantie",
+		"warrentyend": "Garantieende"
+	},
 	"hardware": {
 		"hardware": "Hardware",
 		"uuid": "Hardware UUID"
@@ -253,6 +280,16 @@
 			"title": "Timemachine Bericht"
 		},
 		"username": "Benutzername"
+		"wifi": {
+            "apmode": "AP Modus",
+            "authtype": "802.11X Authentifizierungstyp", 
+            "channel": "Kanal", 
+            "lasttx": "Letzte Empfangsrate (Mbps)", 
+            "linkauthtype": "Link Auth Typ", 
+            "maxtx": "Max Senderate (Mbps)", 
+            "noise": "Störsignal", 
+            "state": "WiFi Status"
+        }
 	},
 	"location": {
 		"address": "Addresse",
@@ -261,10 +298,13 @@
 		"currentstatus": "Derzeitiger Status",
 		"ls_enabled": "Ortungsdienste aktiviert",
 		"lastrun": "Letzter Lauf",
+		"lastlocationrun": "Letzte Standortbestimmung",
 		"latitude": "Breitengrad",
 		"latitudeaccuracy": "Genauigkeit des Breitengrades",
 		"longitude": "Längengrad",
 		"longitudeaccuracy": "Genauigkeit des Längengrades"
+		"report": "Standortreport",
+		"stalelocation": "Veralteter Standort"
 	},
 	"machine": {
 		"hardware_widget_title": "Liste der Hardwaremodelle"
@@ -284,10 +324,12 @@
 		"package_installed": "__pkg__ installiert",
 		"package_installed_plural": "__count__ Pakete installiert",
 		"panel_title": "Munki Statistik diese Woche",
+		"munkiprotocol": "Munki Protokoll",
 		"run_type": "Run Type",
 		"version": "Munki Version",
 		"warning": "Munki-Warnung: __warning__",
 		"warning_plural": "__count__ Munki-Warnungen"
+		"additional_info": "Weitere Munki Infos"
 	},
 	"name": "Name",
 	"nav": {
@@ -310,6 +352,7 @@
 			"directoryservice": "Verzeichnisdienste",
 			"disk": "Festplatten",
 			"displays": "Displays",
+			"gsx": "GSX",
 			"hardware": "Hardware",
 			"inventory": "Inventar",
 			"location": "Location",
@@ -321,6 +364,7 @@
 			"security": "Sicherheit",
 			"timemachine": "Time Machine",
 			"warranty": "Garantie"
+			"wifi": "WiFi"
 		},
 		"main": {
 		  "dashboard": "Dashboard",
@@ -333,6 +377,7 @@
 			"clients": "Client-Bericht",
 			"configuration": "Konfigurations-Bericht",
 			"hardware": "Hardware-Bericht",
+			"location": "Standorts-Bericht",
 			"munki": "Munki-Bericht",
 			"network": "Netzwerk-Bericht",
 			"power": "Strom-Bericht"
@@ -381,6 +426,11 @@
 		"printer_status": "Druckerstatus",
 		"tab_title": "Installierte Drucker",
 		"url": "URL"
+	},
+	"security": {
+		"security": "Security",
+		"gatekeeper": "Gatekeeper Status",
+		"sip": "SIP Status"
 	},	
 	"serial": "Seriennummer",
 	"servermetrics": {
@@ -499,6 +549,13 @@
 		"munki": {
 			"no_updates_pending": "Keine anstehenden Updates"
 		},
+		"munkiinfo": {
+			"munkiprotocol": {
+				"localrepo": "local repo",
+				"http": "http",
+				"https": "https"
+			}
+		},
 		"power": {
 			"missing": "Fehlt",
 			"normal": "Normal",
@@ -513,5 +570,26 @@
 			"today": "Backup heute",
 			"week_plus": "Letztes Backup vor mehr als einer Woche"
 		}
-	}
+		"warrantysupport":{
+            "warrantyinfo": "Zählt Unterstützt, Vintage, Obsolet und Unbekannten Supportstatus",
+            "warrentysupportstatus": "Garantieabdeckungsstatus"
+        }
+	},
+	"wifi": {
+        "apmode": "Access Point Modus",
+        "bssid": "BSSID",
+        "channel": "Kanal",
+        "extrssi": "Externes RSSI",
+        "lasttrx": "Letzte Übertragungsrate (Mbps)",
+        "maxtrx": "Maximale Übertragungsrate (Mbps)",
+        "networks": "WiFi Netzwerke",
+        "noise": "Störsignalstärke",
+        "nonetworks": "Keine Netzwerke",
+        "rssilevel": "RSSI Stärke",
+        "state": "WiFi Status",
+        "ssid": "SSID",
+        "xauthtype": "802.11X Authentifizierungstyp",
+        "wifiauthtype": "WiFi Authentifizierungstyp",
+        "wifiinfo": "WiFi Information"
+    }
 }
