Add WiFi sharing

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -586,6 +586,7 @@
         "noise": "Noise Level",
         "nonetworks": "No Networks",
         "rssilevel": "RSSI Level",
+        "sharing": "Sharing",
         "state": "WiFi State",
         "ssid": "SSID",
         "xauthtype": "802.11X Authentication Type",
