Add Owner Display Name; Remove uploading the plist data blob

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -208,7 +208,8 @@
 		"listing": {
 			"email": "Email",
 			"status": "Status",
-			"title": "FindMyMac report"
+			"title": "FindMyMac report",
+			"ownerdisplayname": "Owner Display Name"
 		},
 		"widget": {
 			"title": "FindMyMac Status"
