Convert FMM widget to use REST api

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -212,7 +212,9 @@
 			"ownerdisplayname": "Owner Display Name"
 		},
 		"widget": {
-			"title": "FindMyMac Status"
+			"title": "FindMyMac Status",
+			"enabled": "Enabled",
+			"disabled": "Disabled"
 		},
 		"client": {
 			"title": "FindMyMac"
