Add serial number to notification settings

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -411,6 +411,7 @@
 		"all_levels": "All levels",
 		"business_unit": "Business Unit",
 		"business_units_all": "All Business Units",
+		"confirm_delete": "Confirm delete notiication",
 		"edit": "Edit notification",
 		"new": "New notification",
 		"notification_enabled": "Enabled",
