Add notification menu item

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -414,8 +414,9 @@
 		"all_levels": "All levels",
 		"business_unit": "Business Unit",
 		"business_units_all": "All Business Units",
-		"confirm_delete": "Confirm delete notiication",
+		"confirm_delete": "Confirm delete notification",
 		"edit": "Edit notification",
+		"menu_link": "Manage Notifications",
 		"new": "New notification",
 		"notification_enabled": "Enabled",
 		"notification_how": "Method",
