Add system status link

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -510,6 +510,9 @@
 	"system": {
 		"system": "System"
 	},
+	"systemstatus": {
+		"menu_link": "Show Systemstatus"
+	},
 	"tag": {
 		"listing": {
 			"title": "Tag report"
