--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -526,7 +526,7 @@
 		"system": "System"
 	},
 	"systemstatus": {
-		"menu_link": "Show Systemstatus"
+		"menu_link": "Show System Status"
 	},
 	"tag": {
 		"listing": {
