Added WHD version element
Forgot to include the Version from WHD's Asset

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -642,6 +642,7 @@
         "recheck": "Recheck Asset Information",
         "roomName": "Room Name",
         "state": "State",
+        "version": "Version",
         "warrantyExpirationDate": "Warranty Expiration Date"
     },
 	"widget": {
