Change managed installs in munki tab

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -345,7 +345,9 @@
 		"hardware_widget_title": "Hardware model breakdown"
 	},
 	"managedinstalls": {
-		"report": "Managedinstalls Report"
+		"no_managedinstalls": "No Managed Installs",
+		"report": "Managedinstalls Report",
+		"title": "Managed Installs"
 	},
 	"manifest": {
 		"name": "Manifest Name"
@@ -359,6 +361,7 @@
 	"munki": {
 		"error": "Munki error: __error__",
 		"error_plural": "__count__ Munki errors",
+		"errors_and_warnings": "Errors and Warnings",
 		"package_installed": "__pkg__ installed",
 		"package_installed_plural": "__count__ packages installed",
 		"panel_title": "Munki statistics this week",
@@ -443,6 +446,7 @@
 	"new_client_plural": "New Clients",
 	"no_clients": "No Clients",
 	"no_data": "No Data",
+	"no_errors_or_warnings": "No Errors or Warnings",
 	"notification": {
 		"all_levels": "All levels",
 		"business_unit": "Business Unit",
