Created DS UI Bits

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -106,6 +106,7 @@
 			"ard": "ARD",
 			"bluetooth": "Bluetooth",
 			"certificates": "Certificates",
+			"deploystudio": "DeployStudio",
 			"displays": "Displays",
 			"ds": "Directory Services",
 			"gsx": "GSX",
@@ -187,6 +188,32 @@
 		"widget_info": "Total number of known external displays",
 		"widget_title": "External Displays Count"
 	},
+    "ds": {
+		"computername": "Computer Name",
+        "architecture": "Architecture",
+        "dstudio-auto-disable": "Auto Disable",
+        "dstudio-auto-reset-workflow": "Auto Reset Workflow",
+        "dstudio-auto-started-workflow": "Auto Started Workflow",
+        "dstudio-bootcamp-windows-computer-name": "Boot Camp Windows Name",
+        "dstudio-disabled": "Disabled",
+        "dstudio-group": "Group",
+        "dstudio-host-ard-field-1": "ARD Field 1",
+        "dstudio-host-ard-field-2": "ARD Field 2",
+        "dstudio-host-ard-field-3": "ARD Field 3",
+        "dstudio-host-ard-field-4": "ARD Field 4",
+        "dstudio-host-ard-ignore-empty-fields": "Ignore Empty ARD Fields",
+        "dstudio-host-delete-other-locations": "Delete Other Locations",
+        "dstudio-host-model-identifier": "Model Identifier",
+        "dstudio-host-new-network-location": "New Network Location",
+        "dstudio-host-serial-number": "Serial Number",
+        "dstudio-host-type": "Host Type",
+        "dstudio-last-workflow": "Last Workflow Run",
+        "dstudio-last-workflow-duration": "Last Workflow Duration",
+        "dstudio-last-workflow-execution-date": "Last Workflow Execution Date",
+        "dstudio-last-workflow-status": "Workflow Status",
+        "dstudio-mac-addr": "MAC Address",
+        "recheck": "Pull DeployStudio Data"
+    },
 	"edit": "Edit",
 	"email": {
 		"email": "Email",
@@ -384,6 +411,7 @@
 			"bluetooth": "Bluetooth",
 			"clients": "Clients",
 			"certificate": "Certificates",
+			"ds": "DeployStudio",
 			"directoryservice": "Directory Service",
 			"disk": "Disk",
 			"displays": "Displays",
