Use name and display_name

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -187,6 +187,7 @@
 		"widget_info": "Total number of known external displays",
 		"widget_title": "External Displays Count"
 	},
+	"displayname": "Display Name",
 	"edit": "Edit",
 	"email": {
 		"email": "Email",
